<resources>
    <string name="app_name">Calc</string>
    <string name="sum">+</string>
    <string name="subt">-</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="factoriel">!</string>
    <string name="pow">^</string>
    <string name="rezultati">reset</string>
    <string name="shtate">7</string>
    <string name="tete">8</string>
    <string name="nente">9</string>
    <string name="gjashte">6</string>
    <string name="pese">5</string>
    <string name="kater">4</string>
    <string name="tre">3</string>
    <string name="dy">2</string>
    <string name="nje">1</string>
    <string name="zero">0</string>
</resources>
